--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.SocialMedia</groupId>
     <artifactId>LoginAndRegistration</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>LoginAndRegistration</name>
     <description>LoginAndRegistration</description>
     <properties>
