--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
     <groupId>com.SocialMedia</groupId>
     <artifactId>LoginAndRegistration</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
     <name>LoginAndRegistration</name>
     <description>LoginAndRegistration</description>
     <properties>
@@ -115,6 +114,11 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
             </plugin>
         </plugins>
     </build>
